--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,3 +1,69 @@
+
 .nav-container{
-    background-color: green;
+    /* margin-left: 60px; */
+    width: 100%;
+    height: 60px;
+    background-color: tomato;
+
+
 }
+.nav-container nav{
+    margin-right: 90px;
+    /* display: grid;
+    grid-template-columns: 1fr; */
+    /* display: flex;
+    flex-direction: column; */
+
+
+}
+
+.nav-container nav a{
+    
+    float:right;
+    color: white;
+    text-decoration: none;
+    padding:15px;
+    font-size: 20px;
+    font-weight: 600;
+}
+@media only screen and (max-width:540px) {
+    .nav-container{
+        width: 100%;
+        height: 250px;
+    background-color: rgb(144, 113, 107);
+        
+    
+    }
+    .nav-container nav{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    
+}
+@media only screen and (min-width:541px) and (max-width:770px) {
+    .nav-container{
+        width: 100%;
+        height: 200px;
+        /* background-color: green; */
+    }
+    .nav-container nav{
+        color: green;
+        display: grid;
+    grid-template-columns: 1fr;
+        /* display: flex;
+        flex-direction: column; */
+        /* justify-content: center; */
+    }
+    .nav-container nav a{
+    
+        
+        color: green;
+        padding:15px;
+        font-size: 20px;
+        font-weight: 600;
+    }
+    
+}
+
