--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -15,6 +15,7 @@
 .banner-container .banner-header h1{
     color: white;
     font-size: 80px;
+    text-align: center;
 }
 .banner-container .banner-header h1 .mark-write{
     color: rgb(229, 145, 229);
