--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -61,3 +61,9 @@
     margin-left: 20px;
     margin-top: 20px;
 }
+.Copyright{
+    text-align: center;
+    background-color: black;
+    color: gray;
+    padding: 20px;
+}
