Appointment components added

--- a/src/components/Doctor/Doctor.css
+++ b/src/components/Doctor/Doctor.css
@@ -3,6 +3,7 @@
 .doctor-card-design{
     height: 650px;
     margin-bottom: 50px;
+    border: 1px solid lightsalmon ;
 }
 .description{
     text-align: justify;
