--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -67,3 +67,8 @@
     color: gray;
     padding: 20px;
 }
+@media only screen and (max-width:540px) {
+    .footer-deatel, .footer-qsn{
+        width:90% ;
+    }
+}
